@@ -93,7 +93,9 @@ Documentation
 
 Other
 ----------------------
-1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument
+1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument.
+             Refactored to load Evaluators lazily. Removed multiple document nodes in the configuration xml.
+             Removed support for 'default' variables, they are automatically available as request parameters.
              (Noble Paul via shalin)
 
 ================== Release 1.3.0 20080915 ==================
